--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- Xintia, parabéns pelo código, você é minha ídola. Desse index eu entendi tudo! -->
 <head>
     <meta charset="utf-8" />
     <title>M de Maravilhosa</title>
